--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,8 +1,8 @@
-siteTitle: Yellow Cake
-siteUrl: 'https://yellowcake.netlify.com'
+siteTitle: Jay World
+siteUrl: 'https://jayworld.netlify.com'
 siteDescription: >-
-  A starter project for creating lightning-fast websites with Gatsby v2 Netlify
-  CMS v2 and Uploadcare media library.
+  A simple blog for people who wanna earn real dough. Not replying on scams all
+  around.
 socialMediaCard:
   image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
-googleTrackingId: 'UA-133175780-1'
+googleTrackingId: UA-133175780-1
