Update Settings “global-settings”

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -4,5 +4,6 @@ siteDescription: >-
   A simple blog for people who wanna earn real dough. Not replying on scams all
   around.
 socialMediaCard:
-  image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
+  image: >-
+    https://ucarecdn.com/29bcf387-e03d-4527-992f-9e1c89ee6ac9/-/crop/800x531/0,0/-/preview/
 googleTrackingId: UA-133175780-1
